<?xml version="1.0" encoding="utf-8"?><!-- Layout for the list of food -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/noContentBackgroundColor"
    tools:context=".PantryActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/food_icon" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-60dp"
        android:background="@color/noContentBackgroundColor">

        <ImageView
            android:id="@+id/empty_shelter_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/empty_pantry"
            android:src="@drawable/empty_pantry" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_shelter_image"
            android:layout_centerHorizontal="true"
            android:paddingTop="16dp"
            android:text="@string/empty_view_title_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:text="@string/empty_view_subtitle_text"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />
</RelativeLayout>