<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightBackgroundColor"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/food_list_item"
        style="@style/CategoryStyle"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/food_item"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_servings_lable"
                style="@style/EditorFieldStyle"
                android:layout_width="200dp"
                android:gravity="right"
                android:text="@string/total_servings"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/servings_list_item"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:gravity="right"
                android:textColor="@color/colorAccent"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/calories_lable"
                style="@style/EditorFieldStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/total_calories"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/calories_list_item"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:gravity="right"
                android:textColor="@color/colorAccent"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>